Changing ’zbatim’ to ’aplikacion’; other rewording and cosmetic changes. Cui honorem, honorem: Elio Qoshi. See bug 117083 for more context

--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -448,7 +448,7 @@ webapps.install = Instaloje
 webapps.install.accesskey = I
 #LOCALIZATION NOTE (webapps.requestInstall) %1$S is the web app name, %2$S is the site from which the web app is installed
 webapps.requestInstall = Doni të instalohet "%1$S" prej këtij sajti (%2$S)?
-webapps.install.success = Zbatimi u Instalua
+webapps.install.success = Aplikacioni u Instalua
 webapps.install.inprogress = Instalim në kryerje e sipër
 webapps.uninstall = Çinstaloje
 webapps.uninstall.accesskey = ÇU
@@ -525,10 +525,10 @@ getUserMedia.selectWindow.label=Dritare për ndarje me të tjerët:
 getUserMedia.selectWindow.accesskey=D
 getUserMedia.selectScreen.label=Ekran për ndarje me të tjerët:
 getUserMedia.selectScreen.accesskey=E
-getUserMedia.selectApplication.label=Zbatim për ndarje me të tjerët:
+getUserMedia.selectApplication.label=Aplikacion për ndarje me të tjerët:
 getUserMedia.selectApplication.accesskey=Z
 getUserMedia.noVideo.label = Pa Video
-getUserMedia.noApplication.label = Pa Zbatim
+getUserMedia.noApplication.label = Pa Aplikacion
 getUserMedia.noScreen.label = Pa Ekran
 getUserMedia.noWindow.label = Pa Dritare
 getUserMedia.noAudio.label = Pa Audio
@@ -546,7 +546,7 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 dritare);#1 (#2 dritare)
 getUserMedia.shareSelectedDevices.label = Ndaje Me Të Pajisjen e Përzgjedhur;Ndaji Me Të Pajisjet e Përzgjedhura
 getUserMedia.shareSelectedDevices.accesskey = N
 getUserMedia.shareScreen.label = Ndaje Ekranin
-getUserMedia.shareApplication.label = Ndaje Zbatimin e Përzgjedhur
+getUserMedia.shareApplication.label = Ndaje Aplikacionin e Përzgjedhur
 getUserMedia.shareWindow.label = Ndaje Dritaren e Përzgjedhur
 getUserMedia.shareSelectedItems.label = Ndaji Objektet e Përzgjedhur
 getUserMedia.always.label = Ndaje Përherë
@@ -558,7 +558,7 @@ getUserMedia.never.accesskey = K
 getUserMedia.sharingCamera.message2 = Jeni duke e ndarë kamerën tuaj me këtë faqe.
 getUserMedia.sharingMicrophone.message2 = Jeni duke e ndarë mikrofonin tuaj me këtë faqe.
 getUserMedia.sharingCameraAndMicrophone.message2 = Jeni duke ndarë kamerën dhe mikrofonin tuaj me këtë faqe.
-getUserMedia.sharingApplication.message = Jeni duke ndarë një zbatim me këtë faqe.
+getUserMedia.sharingApplication.message = Jeni duke ndarë një aplikacion me këtë faqe.
 getUserMedia.sharingScreen.message = Jeni duke e ndarë ekranin tuaj me këtë faqe.
 getUserMedia.sharingWindow.message = Jeni duke ndarë një dritare me këtë faqe.
 getUserMedia.continueSharing.label = Vazhdoje Ndarjen Me të Tjerët
@@ -581,17 +581,17 @@ getUserMedia.sharingMenu.accesskey = P
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamerë)
 getUserMedia.sharingMenuMicrophone = %S (mikrofon)
-getUserMedia.sharingMenuApplication = %S (zbatim)
+getUserMedia.sharingMenuApplication = %S (aplikacion)
 getUserMedia.sharingMenuScreen = %S (ekran)
 getUserMedia.sharingMenuWindow = %S (dritare)
 getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
-getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe zbatim)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe aplikacion)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
-getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe zbatim)
+getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe plikacion)
 getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
-getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe zbatim)
+getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe aplikacion)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon dhe ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon dhe dritare)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
