--- a/sq/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/sq/browser/chrome/browser/devtools/appcacheutils.properties
@@ -48,7 +48,7 @@ fileChangedButNotManifest=Kartela %1$S qe modifikuar pas %2$S. Ndaj në rreshtin
 # LOCALIZATION NOTE (cacheControlNoStore): the specified page has a header
 # preventing caching or storing information. Parameters: %1$S is the resource
 # name, %2$S is the line number.
-cacheControlNoStore=%1$S e ka cache-control të vënë si no-store. Kjo do ta pengojë fshehtinën e zbatimit të depozitojë kartelën në rreshtin %2$S.
+cacheControlNoStore=%1$S e ka cache-control të vënë si no-store. Kjo do ta pengojë fshehtinën e aplikacionit të depozitojë kartelën në rreshtin %2$S.
 
 # LOCALIZATION NOTE (notAvailable): the specified resource is not available.
 # Parameters: %1$S is the resource name, %2$S is the line number.
