--- a/sq/browser/chrome/browser/devtools/webide.properties
+++ b/sq/browser/chrome/browser/devtools/webide.properties
@@ -6,7 +6,7 @@ title_noApp=Firefox WebIDE
 title_app=Firefox WebIDE: %S
 
 runtimeButton_label=Përzgjidhni Runtime
-projectButton_label=Hape Zbatimin
+projectButton_label=Hape Aplikacionin
 
 mainProcess_label=Procesi Kryesor
 
@@ -16,7 +16,7 @@ remote_runtime_promptTitle=Runtime e Largët
 remote_runtime_promptMessage=hostname:port
 
 importPackagedApp_title=Përzgjidhni Drejtori
-importHostedApp_title=Hapni Zbatim të Strehuar
+importHostedApp_title=Hapni Aplikacion të Strehuar
 importHostedApp_header=Jepni URL Manifesti
 
 notification_showTroubleShooting_label=Diagnostikim
@@ -30,14 +30,14 @@ project_tab_loading=Po ngarkohet…
 
 error_cantInstallNotFullyConnected=Nuk instalohet dot projekti. Jo i lidhur plotësisht.
 error_cantInstallValidationErrors=Nuk instalohet dot projekti. Gabime vleftësimi.
-error_listRunningApps=Nuk merret dot lista e zbatimeve nga pajisja
+error_listRunningApps=Nuk merret dot lista e aplikacioneve nga pajisja
 
 # Variable: name of the operation (in english)
 error_operationTimeout=Veprimit i mbaroi koha: %1$S
 error_operationFail=Veprimi dështoi: %1$S
 
 # Variable: app name
-error_cantConnectToApp=Nuk lidhet dot me zbatimin: %1$S
+error_cantConnectToApp=Nuk lidhet dot me aplikacionin: %1$S
 
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Nuk sillet dot lista e shtesave: %S
