--- a/sq/browser/chrome/browser/feeds/subscribe.properties
+++ b/sq/browser/chrome/browser/feeds/subscribe.properties
@@ -9,8 +9,8 @@ addHandlerAddButtonAccesskey=S
 handlerRegistered="%S" është i regjistruar një herë si Lexues Prurjesh
 liveBookmarks=Faqerojtës të Gjallë
 subscribeNow=Pajtomë Tani
-chooseApplicationMenuItem=Zgjidhni Zbatim…
-chooseApplicationDialogTitle=Zgjidhni Zbatim
+chooseApplicationMenuItem=Zgjidhni Aplikacion…
+chooseApplicationDialogTitle=Zgjidhni Aplikacion
 alwaysUse=Përdor përherë %S për pajtim prurje
 mediaLabel=Kartela media
 
@@ -47,5 +47,5 @@ feedSubscriptionVideoPodcast2=Mund të pajtoheni te ky podkast video për të pa
 
 # Protocol Handling
 # "Add %appName (%appDomain) as an application for %protocolType links?"
-addProtocolHandler=Të shtohet %S (%S) si një zbatim për lidhje %S?
-addProtocolHandlerAddButton=Shtoni Zbatim
+addProtocolHandler=Të shtohet %S (%S) si një aplikacion për lidhje %S?
+addProtocolHandlerAddButton=Shtoni Aplikacion
