--- a/sq/browser/chrome/browser/preferences/preferences.properties
+++ b/sq/browser/chrome/browser/preferences/preferences.properties
@@ -37,7 +37,7 @@ chooseDownloadFolderTitle=Zgjidhni Dosje Shkarkimesh:
 
 #### Download Actions
 fileEnding=kartelë %S
-fpTitleChooseApp=Përzgjidhni Zbatim Ndihmës
+fpTitleChooseApp=Përzgjidhni Aplikacion Ndihmës
 
 #### Cookie Viewer
 hostColon=Strehë:
@@ -76,7 +76,7 @@ offlineAppRemoveConfirm=Hiqi të dhënat jashtë linje"
 videoPodcastFeed=Podkast Video
 useOtherApp=Përdorni tjetër…
 audioPodcastFeed=Podkast
-manageApp=Hollësi Zbatimi…
+manageApp=Hollësi Aplikacioni…
 
 ####Preferences::Advanced::Network
 #LOCALIZATION NOTE: The next string is for the disk usage of the web content cache.
@@ -91,7 +91,7 @@ actualDiskCacheSizeCalculated=Po llogaritet madhësia e fshehtinës së lëndës
 #   e.g., "Your application cache is currently using 200 MB"
 #   %1$S = size
 #   %2$S = unit (MB, KB, etc.)
-actualAppCacheSize=Fshehtina e zbatimit tuaj, deri tani, ka në përdorim %1$S %2$S hapësirë disku
+actualAppCacheSize=Fshehtina e aplikacionit tuaj, deri tani, ka në përdorim %1$S %2$S hapësirë disku
 
 ###Preferences::Advanced::Update
 #LOCALIZATION NOTE: The next string is for updating in Windows 8 only instead of updateAuto1.label.  %S = brandShortName
