--- a/sq/mobile/android/chrome/webapp.properties
+++ b/sq/mobile/android/chrome/webapp.properties
@@ -3,10 +3,10 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 checkingForUpdatesTitle=Po kontrollohet për përditësime…
-checkingForUpdatesMessage=Po kontrollohet për përditësime për zbatimet tuaja
+checkingForUpdatesMessage=Po kontrollohet për përditësime për aplikacionet tuaja
 
 noUpdatesTitle=Pa përditësime gati
-noUpdatesMessage=Nuk ka përditësime për zbatimet tuaja
+noUpdatesMessage=Nuk ka përditësime për aplikacionet tuaja
 
 # LOCALIZATION NOTE (retrieveUpdateTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -56,4 +56,4 @@ retrievalFailedTitle=Dështoi #1 përditësim;Dështuan #1 përditësime
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Dështoi në marrjen e përditësimit për %1$S;Dështoi në marrjen e përditësimeve për %1$S
 
-webappsDisabled=Instalimi i zbatimeve është i çaktivizuar
+webappsDisabled=Instalimi i aplikacioneve është i çaktivizuar
