--- a/sq/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sq/security/manager/chrome/pipnss/nsserrors.properties
@@ -39,7 +39,7 @@ SSL_ERROR_RX_MALFORMED_FINISHED=SSL-ja mori mesazh duarshtrëngimi Mbaruar të k
 SSL_ERROR_RX_MALFORMED_CHANGE_CIPHER=SSL-ja mori mesazh duarshtrëngimi Përcaktime Ndryshimi Shifre të keqformuar.
 SSL_ERROR_RX_MALFORMED_ALERT=SSL-ja mori regjistrim Alarmi të keqformuar.
 SSL_ERROR_RX_MALFORMED_HANDSHAKE=SSL-ja mori regjistrim Duarshtrëngimi të keqformuar.
-SSL_ERROR_RX_MALFORMED_APPLICATION_DATA=SSL-ja mori regjistrim Të Dhëna Zbatimi të keqformuar.
+SSL_ERROR_RX_MALFORMED_APPLICATION_DATA=SSL-ja mori regjistrim Të Dhënash Aplikacioni të keqformuar.
 SSL_ERROR_RX_UNEXPECTED_HELLO_REQUEST=SSL-ja mori mesazh Kërkesë Hello të papritur.
 SSL_ERROR_RX_UNEXPECTED_CLIENT_HELLO=SSL-ja mori mesazh Hello Klienti të papritur.
 SSL_ERROR_RX_UNEXPECTED_SERVER_HELLO=SSL-ja mori mesazh Hello Shërbyesi të papritur.
@@ -53,7 +53,7 @@ SSL_ERROR_RX_UNEXPECTED_FINISHED=SSL-ja mori mesazh duarshtrëngimi Mbaruar të 
 SSL_ERROR_RX_UNEXPECTED_CHANGE_CIPHER=SSL-ja mori regjistrim Përcaktime Ndryshimi Shifre të papritur.
 SSL_ERROR_RX_UNEXPECTED_ALERT=SSL-ja mori regjistrim Alarmi të papritur.
 SSL_ERROR_RX_UNEXPECTED_HANDSHAKE=SSL-ja mori regjistrim Duarshtrëngimi të papritur.
-SSL_ERROR_RX_UNEXPECTED_APPLICATION_DATA=SSL-ja mori regjistrim Të Dhëna Zbatimi të papritur.
+SSL_ERROR_RX_UNEXPECTED_APPLICATION_DATA=SSL-ja mori regjistrim Të Dhënash Aplikacioni të papritur.
 SSL_ERROR_RX_UNKNOWN_RECORD_TYPE=SSL-ja mori regjistrim me lloj të panjohur të dhënash.
 SSL_ERROR_RX_UNKNOWN_HANDSHAKE=SSL-ja mori mesazh duarshtrëngimi me lloj të panjohur mesazhi.
 SSL_ERROR_RX_UNKNOWN_ALERT=SSL-ja mori regjistrim alarmi me përshkrim të panjohur alarmi.
@@ -199,7 +199,7 @@ SEC_ERROR_USER_CANCELLED=Përdoruesi shtypi Cancel.
 SEC_ERROR_PKCS12_DUPLICATE_DATA=E paimportuar, tashmë në bazën e të dhënave.
 SEC_ERROR_MESSAGE_SEND_ABORTED=Mesazh që nuk u dërgua.
 SEC_ERROR_INADEQUATE_KEY_USAGE=Përdorim i papërshtatshëm kyçi dëshmie për veprimin e provuar.
-SEC_ERROR_INADEQUATE_CERT_TYPE=Lloj dëshmie i pa miratuar për zbatimin.
+SEC_ERROR_INADEQUATE_CERT_TYPE=Lloj dëshmie i pa miratuar për aplikacionin.
 SEC_ERROR_CERT_ADDR_MISMATCH=Adresa në nënshkrimin e dëshmisë nuk përputhet me adresën në titullin e mesazhit.
 SEC_ERROR_PKCS12_UNABLE_TO_IMPORT_KEY=Nuk arrin të importojë.  Gabim gjatë përpjekjes për importim kyçi privat.
 SEC_ERROR_PKCS12_IMPORTING_CERT_CHAIN=Nuk arrin të importojë.  Gabim gjatë përpjekjes për importim zinxhiri dëshmish.
