--- a/sq/toolkit/chrome/global/commonDialogs.properties
+++ b/sq/toolkit/chrome/global/commonDialogs.properties
@@ -18,7 +18,7 @@ Cancel=Anuloje
 Save=&Ruaje
 PromptUsernameAndPassword2=Lypset Mirëfilltësim
 PromptPassword2=Lipset Fjalëkalim
-ScriptDlgGenericHeading=[Zbatim JavaScript]
+ScriptDlgGenericHeading=[Aplikacion JavaScript]
 ScriptDlgHeading=Faqja te %S thotë:
 ScriptDialogLabel=Pengoja kësaj faqeje krijimin e dialogëve shtesë
 ScriptDialogPreventTitle=Ripohoni Parapëlqimin për Dialogët
