--- a/sq/toolkit/chrome/global/filepicker.properties
+++ b/sq/toolkit/chrome/global/filepicker.properties
@@ -4,7 +4,7 @@
 
 errorCreateNewDirMessage=Nuk u krijua dot drejtoria %S 
 openWithoutPermissionMessage_file=Kartela %S nuk është e lexueshme
-appsTitle=Zbatime
+appsTitle=Aplikacione
 noButtonLabel=Jo
 errorCreateNewDirIsFileMessage=S’mund të krijohej drejtoria, %S është kartelë
 errorOpeningFileTitle=Gabim gjatë hapjes së %S
