--- a/sq/toolkit/chrome/global/webapps.properties
+++ b/sq/toolkit/chrome/global/webapps.properties
@@ -4,4 +4,4 @@
 
 # LOCALIZATION NOTE (webapps.uninstall.notification): %S will be replaced with the name of the uninstalled web app
 uninstall.notification = %S është çinstaluar prej kompjuterit tuaj.
-uninstall.label = Çinstaloni Zbatim
+uninstall.label = Çinstaloni Aplikacionin
