--- a/sq/webapprt/webapprt/overrides/appstrings.properties
+++ b/sq/webapprt/webapprt/overrides/appstrings.properties
@@ -10,26 +10,26 @@ connectionFailure=Gjatë përpjekjes për t’u lidhur me %S lidhja nuk u pranua
 netInterrupt=Lidhja me %S u përfunduar papritmas. Mund të jenë shpërngulur vetëm ca të dhëna.
 netTimeout=Gjatë përpjekjes për t’u lidhur me %S, veprimit i mbaroi koha.
 redirectLoop=Një shërbyes po e ridrejton kërkesën në një rrugë së cilës nuk do t’i gjehet fundi kurrë.
-confirmRepostPrompt=Që të vazhdohet, zbatimi duhet të dërgojë të dhëna që do të shkaktojnë përsëritjen e cilitdo veprim (fjala vjen kërkim apo ripohim porosie) që po kryhej më parë.
+confirmRepostPrompt=Që të vazhdohet, aplikacioni duhet të dërgojë të dhëna që do të shkaktojnë përsëritjen e cilitdo veprim (fjala vjen kërkim apo ripohim porosie) që po kryhej më parë.
 resendButton.label=Ridërgoje
-unknownSocketType=Zbatimi nuk di se si të komunikojë me shërbyesin.
-netReset=Lidhja me shërbyesin u rivendos, teksa zbatimi po ngarkohej.
-notCached=Zbatimi kërkoi një dokument që nuk është më i passhëm.
-netOffline=Zbatimi tani është nën mënyrën jashtë linje dhe nuk mund të përdorë rrjetin.
+unknownSocketType=Aplikacioni nuk di se si të komunikojë me shërbyesin.
+netReset=Lidhja me shërbyesin u rivendos, teksa aplikacioni po ngarkohej.
+notCached=Aplikacioni kërkoi një dokument që nuk është më i passhëm.
+netOffline=Aplikacioni tani është nën mënyrën jashtë linje dhe nuk mund të përdorë rrjetin.
 isprinting=Dokumenti nuk ndryshohet dot gjatë Shtypjes ose Paraparjes së Shtypjes.
-deniedPortAccess=Zbatimi provoi të përdorë një portë rrjeti te e cila nuk duhej të kishte hyrje. Për mbrojtjen tuaj, zbatimi e anuloi kërkesën.
-proxyResolveFailure=Zbatimi është formësuar të përdorë një shërbyes ndërmjetës që nuk gjendet dot.
-proxyConnectFailure=Zbatimi është formësuar të përdorë një shërbyes ndërmjetës i cili nuk po pranon lidhje.
-contentEncodingError=Zbatimi mori nga një shërbyes një përgjigje që përdorte format të pavlefshëm ose të pambuluar ngjeshjeje.
-unsafeContentType=Zbatimi nuk mund të vazhdojë, ngaqë përdori një lloj kartele që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e zbatimit për t’u bërë të ditur këtë problem.
+deniedPortAccess=Aplikacioni provoi të përdorë një portë rrjeti te e cila nuk duhej të kishte hyrje. Për mbrojtjen tuaj, aplikacioni e anuloi kërkesën.
+proxyResolveFailure=Aplikacioni është formësuar të përdorë një shërbyes ndërmjetës që nuk gjendet dot.
+proxyConnectFailure=Aplikacioni është formësuar të përdorë një shërbyes ndërmjetës i cili nuk po pranon lidhje.
+contentEncodingError=Aplikacioni mori nga një shërbyes një përgjigje që përdorte format të pavlefshëm ose të pambuluar ngjeshjeje.
+unsafeContentType=Aplikacioni nuk mund të vazhdojë, ngaqë përdori një lloj kartele që mund të mos jetë i parrezikshëm, nëse hapet. Ju lutemi, lidhuni me të zotët e aplikacionit për t’u bërë të ditur këtë problem.
 externalProtocolTitle=Kërkesë Protokolli të Jashtëm
-externalProtocolPrompt=Që të trajtohet %1$S, duhet nisur një zbatim i jashtëm: lidhje.\n\n\nLidhje e kërkuar:\n\n%2$S\n\nZbatim: %3$S\n\n\nNëse nuk e prisnit këtë kërkesë, mund të jetë përpjekje për shfrytëzim të një dobësie te ai programi tjetër. Anulojeni këtë kërkesë, veç nëse jeni të sigurt se nuk është dashakeqe.\n
+externalProtocolPrompt=Që të trajtohet %1$S, duhet nisur një aplikacion i jashtëm: lidhje.\n\n\nLidhje e kërkuar:\n\n%2$S\n\nAplikacion: %3$S\n\n\nNëse nuk e prisnit këtë kërkesë, mund të jetë përpjekje për shfrytëzim të një dobësie te ai programi tjetër. Anulojeni këtë kërkesë, veç nëse jeni të sigurt se nuk është dashakeqe.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<I panjohur>
 externalProtocolChkMsg=Mbaje mend zgjedhjen time për krejt lidhjet e këtij lloji.
-externalProtocolLaunchBtn=Nise zbatimin
+externalProtocolLaunchBtn=Nise aplikacionin
 malwareBlocked=Sajti te %S është raportuar si sajt sulmesh dhe është bllokuar, bazuar te parapëlqimet tuaja mbi sigurinë.
 phishingBlocked=Sajti te %S është raportuar si sajesë web, e hartuar të mashtrojë përdoruesit, për t’i bërë ata të japin të dhëna vetjake ose financiare.
-cspFrameAncestorBlocked=Ky zbatim u përpoq të hynte në një burim i cili përmban një rregull sigurie lënde që e pengon trupëzimin e saj në këtë mënyrë.
-corruptedContentError=Zbatimi nuk vazhdon dot ngarkimin, ngaqë u kap një gabim në transmetimin e të dhënave.
-remoteXUL=Ky zbatim u përpoq të përdorë një teknologji të pambuluar që nuk është më e passhme.
+cspFrameAncestorBlocked=Ky aplikacion u përpoq të hynte në një burim i cili përmban një rregull sigurie lënde që e pengon trupëzimin e saj në këtë mënyrë.
+corruptedContentError=Aplikacioni nuk vazhdon dot ngarkimin, ngaqë u kap një gabim në transmetimin e të dhënave.
+remoteXUL=Ky aplikacion u përpoq të përdorë një teknologji të pambuluar që nuk është më e passhme.
