--- a/sq/webapprt/webapprt/overrides/dom.properties
+++ b/sq/webapprt/webapprt/overrides/dom.properties
@@ -13,13 +13,13 @@ DontAskAgain=&Mos më pyet më
 JSURLLoadBlockedWarning=Përpjekje për ngarkimi javascript-i: U bllokua prej\npërgjegjësit të sigurisë një URL prej një strehe\nnë një dritare me lëndë nga një tjetër strehë.
 WindowCloseBlockedWarning=Programthet mund të mos mbyllin dritare që nuk qenë hapur prej programthesh.
 OnBeforeUnloadTitle=Jeni i sigurt?
-OnBeforeUnloadMessage=Ky zbatim po kërkon që të ripohoni se doni të ikni prej këtej - të dhënat që dhatë mund të mos ruhen.
+OnBeforeUnloadMessage=Ky aplikacion po kërkon që të ripohoni se doni të ikni prej këtej - të dhënat që dhatë mund të mos ruhen.
 OnBeforeUnloadStayButton=Qëndro
 OnBeforeUnloadLeaveButton=Braktise
 UnexpectedCanvasVariantStyle=canvas: përpjekja për t’i dhënë strokeStyle-it ose fillStyle-it një vlerë nuk qe as varg, as CanvasGradient, ose u shpërfill një CanvasPattern.
 EmptyGetElementByIdParam=U dha varg i zbrazët te getElementById().
 LowMemoryTitle=Kujdes: Kujtesë e pakët
-LowMemoryMessage=Një programth zbatimi u ndal për shkak të gjendjes me kujtesë të pakët.
+LowMemoryMessage=Një programth aplikacioni u ndal për shkak të gjendjes me kujtesë të pakët.
 SpeculationFailed=Është shkruar një pemë e pabalancuar duke përdorur document.write(), duke bërë që të dhënat prej rrjetit të ripërtypen. Për më tepër të dhëna, shihni https://developer.mozilla.org/en/Optimizing_Your_Pages_for_Speculative_Parsing
 DocumentWriteIgnored=U shpërfill një evokim i document.write() nga një programth i jashtëm i ngarkuar në mënyrë jo të njëkohshme.
 FormValidationTextTooLong=Ju lutemi, shkurtojeni këtë tekst në %S ose më pak shenja (keni përdorur %S shenja).
@@ -55,7 +55,7 @@ nsIDOMWindowInternalWarning=Përdorimi i nsIDOMWindowInternal është i vjetruar
 InputEncodingWarning=Përdorimi i inputEncoding është i vjetruar.
 # LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
 MozBeforePaintWarning=Aktet MozBeforePaint nuk mbulohen më.  mozRequestAnimationFrame duhet të marrë një argument non-null callback.
-FullScreenDeniedBlocked=Kërkesa për shfaqje sa krejt ekrani u hodh poshtë, ngaqë kësaj përkatësie i është mohuar nga përdoruesi përdorimi Krejt Ekrani.
+FullScreenDeniedBlocked=Kërkesa për shfaqje sa krejt ekrani u hodh poshtë, ngaqë kësaj përkatësie i është mohuar nga përdoruesi përdorimi i Krejt Ekranit.
 FullScreenDeniedDisabled=Kërkesa për ekran-të-plotë u hodh poshtë, ngaqë API për ekran-të-plotë është e çaktivizuar nga parapëlqimet e përdoruesit.
 FullScreenDeniedFocusedPlugin=Kërkesa për ekran-të-plotë u mohua, ngaqë fokusi është te një shtojcë e hapur në dritare.
 FullScreenDeniedHidden=Kërkesa për ekran-të-plotë u mohua, ngaqë dokumenti nuk është më i passhëm.
