--- a/sq/webapprt/webapprt/webapp.properties
+++ b/sq/webapprt/webapprt/webapp.properties
@@ -40,7 +40,7 @@ webapps.install.title=Instaloni %S
 # LOCALIZATION NOTE (webapps.install.description): %S will be replaced with the
 # name of the webapp being installed.
 webapps.install.description=Doni të instalohet %S?
-webapps.install.install=Instaloje Zbatimin
+webapps.install.install=Instaloje Aplikacionin
 webapps.install.dontinstall=Mos e Instalo
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
@@ -48,7 +48,7 @@ webapps.uninstall.title=Çinstaloni %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
 webapps.uninstall.description=Doni të çinstalohet %S?
-webapps.uninstall.uninstall=Çinstaloje Zbatimin
+webapps.uninstall.uninstall=Çinstaloje Aplikacionin
 webapps.uninstall.dontuninstall=Mos e Çinstalo
 
 paymentDialog.title=Pagesë
