--- a/sq/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sq/browser/chrome/browser/devtools/gclicommands.properties
@@ -1339,7 +1339,7 @@ debuggerClosed=Para se të përdoret ky urdhër, diagnostikuesi duhet të jetë 
 
 # LOCALIZATION NOTE (appCacheDesc) A very short string used to describe the
 # function of the "appcache" command
-appCacheDesc=Mjete fshehtine zbatimi
+appCacheDesc=Mjete fshehtine aplikacioni
 
 # LOCALIZATION NOTE (appCacheValidateDesc) A very short string used to describe
 # the function of the "appcache validate" command.
@@ -1360,11 +1360,11 @@ appCacheValidatedSuccessfully=Appcache u vleftësua me sukses.
 
 # LOCALIZATION NOTE (appCacheClearDesc) A very short string used to describe
 # the function of the "appcache clear" command.
-appCacheClearDesc=Hiqni zëra nga fshehtina e zbatimit
+appCacheClearDesc=Hiqni zëra nga fshehtina e aplikacionit
 
 # LOCALIZATION NOTE (appCacheClearManual) A fuller description of the
 # 'appcache clear' command, displayed when the user asks for help on what it does.
-appCacheClearManual=Hiqni nga fshehtina e zbatimit një ose më shumë zëra
+appCacheClearManual=Hiqni nga fshehtina e aplikacionit një ose më shumë zëra
 
 # LOCALIZATION NOTE (appCacheClearCleared) Displayed by the "appcache clear"
 # command when entries are successfully cleared.
@@ -1372,11 +1372,11 @@ appCacheClearCleared=Zërat u hoqën me sukses.
 
 # LOCALIZATION NOTE (AppCacheListDesc) A very short string used to describe
 # the function of the "appcache list" command.
-appCacheListDesc=Shfaqni një listë zërash fshehtine të zbatimit.
+appCacheListDesc=Shfaqni një listë zërash fshehtine të aplikacionit.
 
 # LOCALIZATION NOTE (AppCacheListManual) A fuller description of the
 # 'appcache list' command, displayed when the user asks for help on what it does.
-appCacheListManual=Shfaqni një listë të krejt zërave të fshehtinës së zbatimit. Nëse përdoret term kërkimi, atëherë tabela shfaq zëra që përmbajnë atë term.
+appCacheListManual=Shfaqni një listë të krejt zërave të fshehtinës së aplikacionit. Nëse përdoret term kërkimi, atëherë tabela shfaq zëra që përmbajnë atë term.
 
 # LOCALIZATION NOTE (AppCacheListSearchDesc) A very short string used to describe
 # the function of the "search" parameter of the appcache list" command.
