--- a/sq/browser/chrome/browser/preferences/applicationManager.properties
+++ b/sq/browser/chrome/browser/preferences/applicationManager.properties
@@ -4,11 +4,11 @@
 
 # LOCALIZATION NOTE
 # in descriptionApplications, %S will be replaced by one of the 3 following strings
-descriptionApplications=Për trajtim %S mund të përdoren zbatimet vijues.
+descriptionApplications=Për trajtim %S mund të përdoren aplikacionet vijuese.
 
 handleProtocol=lidhjesh %S
 handleWebFeeds=prurjesh Web
 handleFile=lënde %S
 
-descriptionWebApp=Ky zbatim web e ka strehën te:
-descriptionLocalApp=Ky zbatim gjendet te:
+descriptionWebApp=Ky aplikacion web e ka strehën te:
+descriptionLocalApp=Ky aplikacion gjendet te:
