--- a/sq/dom/chrome/dom/dom.properties
+++ b/sq/dom/chrome/dom/dom.properties
@@ -67,7 +67,7 @@ nsIDOMWindowInternalWarning=Përdorimi i nsIDOMWindowInternal është i vjetruar
 InputEncodingWarning=Përdorimi i inputEncoding është i vjetruar.
 # LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
 MozBeforePaintWarning=Aktet MozBeforePaint nuk mbulohen më.  mozRequestAnimationFrame duhet të marrë një argument non-null callback.
-FullScreenDeniedBlocked=Kërkesa për shfaqje sa krejt ekrani u hodh poshtë, ngaqë kësaj përkatësie i është mohuar nga përdoruesi përdorimi Krejt Ekrani.
+FullScreenDeniedBlocked=Kërkesa për shfaqje sa krejt ekrani u hodh poshtë, ngaqë kësaj përkatësie i është mohuar nga përdoruesi përdorimi i Krejt Ekranit.
 FullScreenDeniedDisabled=Kërkesa për ekran-të-plotë u hodh poshtë, ngaqë API për ekran-të-plotë është e çaktivizuar nga parapëlqimet e përdoruesit.
 FullScreenDeniedFocusedPlugin=Kërkesa për ekran-të-plotë u mohua, ngaqë fokusi është te një shtojcë e hapur në dritare.
 FullScreenDeniedHidden=Kërkesa për ekran-të-plotë u mohua, ngaqë dokumenti nuk është më i passhëm.
