--- a/sq/dom/chrome/nsWebBrowserPersist.properties
+++ b/sq/dom/chrome/nsWebBrowserPersist.properties
@@ -4,11 +4,11 @@
 
 #Translated with MozillaTranslator version 5.03
 #Thu Oct 14 12:34:58 EEST 2004
-noMemory=Nuk ka kujtesë të mjaftueshme për të plotësuar veprimin që kërkuat.\n\nDilni nga disa zbatime dhe riprovoni.
+noMemory=Nuk ka kujtesë të mjaftueshme për të plotësuar veprimin që kërkuat.\n\nDilni nga disa aplikacione dhe riprovoni.
 accessError=%S nuk u ruajt dot, ngaqë nuk mund të ndryshoni lëndën e asaj dosje.\n\nNdryshoni vetitë e dosjes dhe riprovoni, ose provoni ruajtjen në një vend tjetër.
 SDAccessErrorCardReadOnly=Nuk shkarkohet dot kartela, ngaqë karta SD po përdoret.
 SDAccessErrorCardMissing=Nuk shkarkohet dot kartela, ngaqë mungon karta SD.
-helperAppNotFound=%S s’mund të hapej, ngaqë zbatimi ndihmës i përshoqëruar nuk ekziston. Ndryshoni përshoqërimin te parapëlqimet tuaj.
+helperAppNotFound=%S s’mund të hapej, ngaqë aplikacioni ndihmës i përshoqëruar nuk ekziston. Ndryshoni përshoqërimin te parapëlqimet tuaj.
 launchError=%S s’mund të hapej, sepse ndodhi një gabim i panjohur.\n\nNa ndjeni për këtë. Provoni fillimisht ruajtjen në disk e mandej hapjen e kartelës.
 writeError=%S s’mund të ruhej, sepse ndodhi një gabim i panjohur.\n\nNa ndjeni për këtë. Provoni ruajtjen në një vend tjetër.
 title=Po shkarkohet %S
