--- a/sq/security/manager/chrome/pippki/pippki.properties
+++ b/sq/security/manager/chrome/pippki/pippki.properties
@@ -53,7 +53,7 @@ devinfo_modname=Modul
 issuerNotKnown=Ngaqë nuk njihni autoritetin e dëshmive që ka lëshuar këtë dëshmi, nuk e besoni mirëfilltësinë e kësaj dëshmie, veç në u tregoftë ndryshe këtu.
 
 deleteCaCertConfirm2=Keni kërkuar të fshihen këto dëshmi AD-sh. Do të hiqet çfarëdo besimi për dëshmi të trupëzuara, çka ka të njëjtin efekt. Jeni i sigurt se doni të fshihen ose të mos besohen?
-deleteCaCertImpactX2=Nëse e fshini ose nuk e besoni një dëshmi autoriteti dëshmish (AD), ky zbatim nuk do të besojë më ndonjë dëshmi nga ai AD.
+deleteCaCertImpactX2=Nëse e fshini ose nuk e besoni një dëshmi autoriteti dëshmish (AD), ky aplikacion nuk do të besojë më ndonjë dëshmi nga ai AD.
 deleteCaCertTitle2=Fshini ose Mos Besoni Dëshmi AD-sh
 
 devinfo_stat_loggedin=I futur
@@ -90,7 +90,7 @@ issuerTrusted=Ngaqë besoni autoritetin e dëshmive që ka lëshuar këtë dësh
 devinfo_label=Etiketë
 certDetails=Shfaqës Dëshmish:
 fips_nonempty_password_required=Mënyra FIPS kërkon që të keni të caktuar një Fjalëkalim të Përgjithshëm për çdo pajisje sigurie. Ju lutemi, caktoni fjalëkalimin para se të aktivizoni mënyrën FIPS.
-unable_to_toggle_fips=Nuk arrini të këmbejë mënyrat FIPS për pajisjen e sigurisë. Këshillohet ta mbyllni dhe ta rinisni zbatimin.
+unable_to_toggle_fips=Nuk arrini të këmbejë mënyrat FIPS për pajisjen e sigurisë. Këshillohet ta mbyllni dhe ta rinisni aplikacionin.
 resetPasswordConfirmationTitle=Ricaktoni Fjalëkalimin e Përgjithshëm
 deleteUserCertImpact=Nëse fshini një nga dëshmitë tuaja vetjake, nuk mund ta përdorni më për identifikimin e vetvetes.
 editTrustCA=Dëshmia "%S" përfaqëson një Autoritet Dëshmish.
