--- a/sq/toolkit/chrome/mozapps/downloads/unknownContentType.properties
+++ b/sq/toolkit/chrome/mozapps/downloads/unknownContentType.properties
@@ -7,10 +7,10 @@
 defaultApp=%S (parazgjedhje)
 title=Po hapet %S
 selectDownloadDir=Përzgjidhni Dosje Shkarkimesh
-badApp=Zbatimi që zgjodhët ("%S") s’u gjet dot.  Kontrolloni emër kartele ose zgjidhni një tjetër zbatim.
+badApp=Aplikacioni që zgjodhët ("%S") s’u gjet dot.  Kontrolloni emër kartele ose zgjidhni një tjetër aplikacion.
 saveDialogTitle=Jepni emër kartele për t’u ruajtur te…
-badApp.title=Nuk u gjet zbatim
-chooseAppFilePickerTitle=Zgjidhni Zbatim Ndihmës
+badApp.title=Nuk u gjet aplikacion
+chooseAppFilePickerTitle=Zgjidhni Aplikacion Ndihmës
 unknownAccept.label=Ruaje Kartelën
 unknownCancel.label=Anuloje
 fileType=Kartelë %S
