--- a/sq/toolkit/chrome/mozapps/extensions/selectAddons.properties
+++ b/sq/toolkit/chrome/mozapps/extensions/selectAddons.properties
@@ -8,7 +8,7 @@ source.profile=Ju
 #LOCALIZATION NOTE (source.bundled) add-ons shipped with the application, and thus
 # treated as installed by the user. This may be
 # translated as "You" or "User" depending on the locale
-source.bundled=Ju (Paketuar Me Zbatimin)
+source.bundled=Ju (Paketuar Me Aplikacionin)
 #LOCALIZATION NOTE (source.other) add-ons installed by other applications
 # installed on the computer
 source.other=Palë e Tretë
