--- a/sq/toolkit/chrome/mozapps/handling/handling.properties
+++ b/sq/toolkit/chrome/mozapps/handling/handling.properties
@@ -2,10 +2,10 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-protocol.title=Nis Zbatimin
-protocol.description=Kjo lidhje lyp hapje me një zbatim.
+protocol.title=Nise Aplikacionin
+protocol.description=Kjo lidhje lyp hapje me një aplikacion.
 protocol.choices.label=Dërgoje te:
 protocol.checkbox.label=Mba mend zgjedhjen time për lidhje %S.
 protocol.checkbox.extra=Kjo mund të ndryshohet te parapëlqimet e %S-it. 
 protocol.checkbox.accesskey=M             
-choose.application.title=Tjetër Zbatim…
+choose.application.title=Tjetër Aplikacion…
