--- a/sq/toolkit/crashreporter/crashreporter.ini
+++ b/sq/toolkit/crashreporter/crashreporter.ini
@@ -13,17 +13,17 @@ CrashReporterTitle=Njoftues Vithisjesh
 # LOCALIZATION NOTE (CrashReporterVendorTitle): %s is replaced with the vendor name.  (i.e. "Mozilla")
 CrashReporterVendorTitle=Njoftues Vithisjesh %s
 # LOCALIZATION NOTE (CrashReporterErrorText): %s is replaced with another string containing detailed information.
-CrashReporterErrorText=Zbatimi pati një problem dhe u vithis.\n\nPër fat të keq, njoftuesi i vithisjeve nuk është në gjendje të parashtrojë një njoftim për këtë vithisje.\n\nHollësi: %s
+CrashReporterErrorText=Aplikacioni pati një problem dhe u vithis.\n\nPër fat të keq, njoftuesi i vithisjeve nuk është në gjendje të parashtrojë një njoftim për këtë vithisje.\n\nHollësi: %s
 # LOCALIZATION NOTE (CrashReporterProductErrorText2): The first %s is replaced with the product name (i.e. "Firefox"), the second is replaced with another string containing detailed information.  These two substitutions can not be reordered!
 CrashReporterProductErrorText2=%s-i pati një problem dhe u vithis.\n\nPër fat të keq, njoftuesi i vithisjeve nuk është në gjendje të parashtrojë njoftim vithisjeje.\n\nHollësi: %s
 CrashReporterSorry=Na Ndjeni
 # LOCALIZATION NOTE (CrashReporterDescriptionText2): The %s is replaced with the product name.
 CrashReporterDescriptionText2=%s-i pati një problem dhe u vithis.\n\nPër të na ndihmuar në diagnostikimin dhe ndreqjen e problemit, mund të na dërgoni një njoftim vithisjeje.
-CrashReporterDefault=Ky zbatim po xhirohet pas një vithisje, për t’iu njoftuar problemin autorëve të zbatimit.  Nuk do të duhej të xhirohej drejtpërsëdrejti.
+CrashReporterDefault=Ky aplikacion po xhirohet pas një vithisje, për t’iu njoftuar problemin autorëve të aplikacionit.  Nuk do të duhej të xhirohej drejtpërsëdrejti.
 Details=Hollësi…
 ViewReportTitle=Lëndë Njoftimi
 CommentGrayText=Shtoni një koment.  Shënim: Komentet janë të dukshëm për publikun
-ExtraReportInfo=Ky njoftim përmban gjithashtu të dhëna rreth gjendjes së zbatimit kur u vithis.
+ExtraReportInfo=Ky njoftim përmban gjithashtu të dhëna rreth gjendjes së aplikacionit kur u vithis.
 # LOCALIZATION NOTE (CheckSendReport): The %s is replaced with the vendor name.
 CheckSendReport=Njoftojeni %s-n rreth kësaj vithisjeje që të mund ta ndreqin
 CheckIncludeURL=Përfshi adresën e faqes ku gjendesha
@@ -43,14 +43,14 @@ Close=Mbylle
 CrashID=ID Vithisjeje: %s
 # LOCALIZATION NOTE (CrashDetailsURL): The %s is replaced with a URL that the user can visit to view the crash details.
 CrashDetailsURL=Mund të shihni hollësitë e kësaj vithisjeje te %s
-ErrorBadArguments=Zbatimi dha një argument të pavlefshëm.
-ErrorExtraFileExists=Zbatimi nuk la ndonjë kartelë të dhënash zbatimi.
-ErrorExtraFileRead=S’lexoi dot kartelën e të dhënave të zbatimit.
-ErrorExtraFileMove=S’lëvizi dot kartelën e të dhënave të zbatimit.
-ErrorDumpFileExists=Zbatimi nuk la ndonjë kartelë zbrazjeje vithisjeje.
+ErrorBadArguments=Aplikacioni dha një argument të pavlefshëm.
+ErrorExtraFileExists=Aplikacioni nuk la ndonjë kartelë të dhënash aplikacioni.
+ErrorExtraFileRead=S’lexoi dot kartelën e të dhënave të aplikacionit.
+ErrorExtraFileMove=S’lëvizi dot kartelën e të dhënave të aplikacionit.
+ErrorDumpFileExists=Aplikacioni nuk la ndonjë kartelë zbrazjeje vithisjeje.
 ErrorDumpFileMove=S’lëvizi dot zbrazje vithisjeje.
-ErrorNoProductName=Zbatimi nuk identifikoi veten.
-ErrorNoServerURL=Zbatimi nuk tregoi ndonjë shërbyes njoftimi vithisjesh.
+ErrorNoProductName=Aplikacioni nuk identifikoi veten.
+ErrorNoServerURL=Aplikacioni nuk tregoi ndonjë shërbyes njoftimi vithisjesh.
 ErrorNoSettingsPath=S’gjeti dot rregullimet mbi njoftuesin e vithisjeve.
 ErrorCreateDumpDir=S’krijoi dot drejtori radhe zbrazjesh.
 # LOCALIZATION NOTE (ErrorEndOfLife): The %s is replaced with the product name.
