Typo fixing and cosmetic changes

--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -588,7 +588,7 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamerë dhe mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamerë, mikrofon dhe aplikacion)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamerë, mikrofon dhe ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamerë, mikrofon dhe dritare)
-getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe plikacion)
+getUserMedia.sharingMenuCameraApplication = %S (kamerë dhe aplikacion)
 getUserMedia.sharingMenuCameraScreen = %S (kamerë dhe ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamerë dhe dritare)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon dhe aplikacion)
