--- a/sq/browser/chrome/browser/devtools/app-manager.properties
+++ b/sq/browser/chrome/browser/devtools/app-manager.properties
@@ -34,7 +34,7 @@ validator.invalidProjectType=Lloj i panjohur projekti '%S'
 validator.missNameManifestProperty=Te Manifesti mungon 'name' i detyrueshëm.
 validator.missIconsManifestProperty=Te Manifesti mungon 'icons'.
 validator.missIconMarketplace2=Parashtrimi i aplikacionit te Marketplace-i lyp një ikonë 128px
-validator.invalidAppType=Lloj i panjohur plikacioni: '%S'.
+validator.invalidAppType=Lloj i panjohur aplikacioni: '%S'.
 validator.invalidHostedPriviledges=Aplikacioni i strehuar nuk mund të jetë i llojit '%S'.
 validator.noCertifiedSupport=Aplikacionet 'certified' nuk mbulohen plotësisht nga përgjegjësi i Aplikacioneve.
 validator.nonAbsoluteLaunchPath=Shtegu i nisjes duhet të jetë një shteg absolut që fillon me '/': '%S'
