--- a/sq/browser/chrome/browser/places/places.properties
+++ b/sq/browser/chrome/browser/places/places.properties
@@ -82,7 +82,7 @@ detailsPane.noItems=Pa objekte
 # example: 111 items
 detailsPane.itemsCountLabel=Një objekt;#1 objekte
 
-searchBookmarks=Kërko në Faqerojtës
+searchBookmarks=Kërkoni në Faqerojtës
 
 bookmarksLivemarkLoading=Po ngarkohet Faqerojtës i Gjallë…
 bookmarksLivemarkFailed=Ngarkimi i prurjes Faqerojtës i Gjallë dështoi.
