Changing ’zbatim’ to ’aplikacion’; other rewording and cosmetic changes. Cui honorem, honorem: Elio Qoshi. See bug 117083 for more context

--- a/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/sq/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -108,8 +108,8 @@ social-share-button.tooltiptext = Ndajeni Këtë Faqe Me të Tjerët
 panic-button.label = Harroje
 panic-button.tooltiptext = Harro historikun e shfletimit
 
-web-apps-button.label = Zbatime
-web-apps-button.tooltiptext = Zbuloni Zbatime
+web-apps-button.label = Aplikacione
+web-apps-button.tooltiptext = Zbuloni Aplikacione
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
