--- a/sq/browser/chrome/browser/places/places.properties
+++ b/sq/browser/chrome/browser/places/places.properties
@@ -89,6 +89,6 @@ searchengineResultLabel=Kërkim
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
 lockPrompt.title=Gabim Fillimi i Shfletuesit
-lockPrompt.text=Sistemi i faqerojtësve dhe historikut nuk do të jetë funksional, ngaqë një nga kartelat e %S-it është duke u përdorur nga një zbatim tjetër. Ky problem mund të shkaktohet nga disa programe sigurie.
+lockPrompt.text=Sistemi i faqerojtësve dhe historikut nuk do të jetë funksional, ngaqë një nga kartelat e %S-it është duke u përdorur nga një aplikacion tjetër. Ky problem mund të shkaktohet nga disa programe sigurie.
 lockPromptInfoButton.label=Mësoni Më Tepër
 lockPromptInfoButton.accessKey=L
