--- a/sq/browser/chrome/browser/devtools/app-manager.properties
+++ b/sq/browser/chrome/browser/devtools/app-manager.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-index.deprecationNotice=Përgjegjësi i Zbatimeve, në një version të ardhshëm do të hiqet. Projektet tuaja u kaluan te WebIDE.
+index.deprecationNotice=Përgjegjësi i Aplikacioneve, në një version të ardhshëm do të hiqet. Projektet tuaja u kaluan te WebIDE.
 index.launchWebIDE=Nise WebIDE-en
 index.readMoreAboutWebIDE=Lexoni Më Tepër
 
@@ -14,16 +14,16 @@ device.deviceSize=Madhësi pajisjeje: %1$Sx%2$S (%3$S DPI)
 # %1$S is the host name, %2$S is the port number.
 connection.connectedToDevice=E lidhur me %1$S
 connection.connectTo=Lidhu te %1$S:%2$S
-project.filePickerTitle=Përzgjidhni një dosje zbatimi web
+project.filePickerTitle=Përzgjidhni një dosje aplikacioni web
 project.installing=Po instalohet…
 project.installed=U instalua!
 validator.nonExistingFolder=Dosja e projektit nuk ekziston
 validator.expectProjectFolder=Dosja e projektit po dilka një kartelë
-validator.wrongManifestFileName=Zbatimet e paketuara lypin një kartelë manifest që në një dosje rrënjë projekti mund të emërtohet vetëm 'manifest.webapp'
+validator.wrongManifestFileName=Aplikacionet e paketuara lypin një kartelë manifest që në një dosje rrënjë projekti mund të emërtohet vetëm 'manifest.webapp'
 validator.invalidManifestURL=URL e pavlefshme manifesti '%S'
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
-validator.invalidManifestJSON=Manifesti i zbatimit web nuk është kartelë JSON e vlefshme: %1$S te: %2$S
+validator.invalidManifestJSON=Manifesti i aplikacionit web nuk është kartelë JSON e vlefshme: %1$S te: %2$S
 validator.noAccessManifestURL=Nuk arrihet të lexohet kartela manifest: %1$S te: %2$S
 # LOCALIZATION NOTE (validator.invalidHostedManifestURL): %1$S is the URI of
 # the manifest, %2$S is the error message.
@@ -33,13 +33,13 @@ validator.invalidProjectType=Lloj i panjohur projekti '%S'
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Te Manifesti mungon 'name' i detyrueshëm.
 validator.missIconsManifestProperty=Te Manifesti mungon 'icons'.
-validator.missIconMarketplace2=Parashtrimi i zbatimit te Marketplace-i lyp një ikonë 128px
-validator.invalidAppType=Lloj i panjohur zbatimi: '%S'.
-validator.invalidHostedPriviledges=Zbatimi i strehuar nuk mund të jetë i llojit '%S'.
-validator.noCertifiedSupport=zbatimet 'certified' nuk mbulohen plotësisht nga përgjegjësi i Zbatimeve.
+validator.missIconMarketplace2=Parashtrimi i aplikacionit te Marketplace-i lyp një ikonë 128px
+validator.invalidAppType=Lloj i panjohur aplikacioni: '%S'.
+validator.invalidHostedPriviledges=Aplikacioni i strehuar nuk mund të jetë i llojit '%S'.
+validator.noCertifiedSupport=Aplikacionet 'certified' nuk mbulohen plotësisht nga përgjegjësi i Aplikacioneve.
 validator.nonAbsoluteLaunchPath=Shtegu i nisjes duhet të jetë një shteg absolut që fillon me '/': '%S'
-validator.accessFailedLaunchPath=Nuk arrihet të përdoret dokumenti i nisjes së zbatimit '%S'
+validator.accessFailedLaunchPath=Nuk arrihet të përdoret dokumenti i nisjes së aplikacionit '%S'
 # LOCALIZATION NOTE (validator.accessFailedLaunchPathBadHttpCode): %1$S is the URI of
 # the launch document, %2$S is the http error code.
-validator.accessFailedLaunchPathBadHttpCode=Nuk arrihet të përdoret dokumenti i nisjes së zbatimit '%1$S', u mor kodi HTTP %2$S
+validator.accessFailedLaunchPathBadHttpCode=Nuk arrihet të përdoret dokumenti i nisjes së aplikacionit '%1$S', u mor kodi HTTP %2$S
 
