--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -317,7 +317,7 @@ remoteIncomingPromptCancel=Anuloje
 remoteNotificationTitle=U aktivizua diagnostikim i %S
 # LOCALIZATION NOTE (remoteNotificationGenericName): a generic name to use
 # if the name of the app is not available.
-remoteNotificationGenericName=Zbatim
+remoteNotificationGenericName=Aplikacion
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Po dëgjohet tek porta %S
@@ -330,8 +330,8 @@ remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i larg
 helperapps.open=Hape
 helperapps.ignore=Shpërfille
 helperapps.dontAskAgain=Mos pyet sërish për këtë sajt
-helperapps.openWithApp2=Hape Me Zbatimin %S
-helperapps.openWithList2=Hape Me një Zbatim
+helperapps.openWithApp2=Hape Me Aplikacionin %S
+helperapps.openWithList2=Hape Me një Aplikacionin
 helperapps.always=Përherë
 helperapps.never=Kurrë
 helperapps.pick=Plotësoje veprimin duke përdorur
@@ -370,7 +370,7 @@ readerMode.enter = Hyni në Mënyrën Lexues
 readerMode.exit = Dilni nga Mënyra Lexues
 
 #Open in App
-openInApp.pageAction = Hape në Zbatim
+openInApp.pageAction = Hape në Aplikacion
 openInApp.ok = OK
 openInApp.cancel = Anuloje
 
