Fixing some shortcuts broken by the last massive change

--- a/sq/browser/chrome/browser/browser.properties
+++ b/sq/browser/chrome/browser/browser.properties
@@ -526,7 +526,7 @@ getUserMedia.selectWindow.accesskey=D
 getUserMedia.selectScreen.label=Ekran për ndarje me të tjerët:
 getUserMedia.selectScreen.accesskey=E
 getUserMedia.selectApplication.label=Aplikacion për ndarje me të tjerët:
-getUserMedia.selectApplication.accesskey=Z
+getUserMedia.selectApplication.accesskey=AZ
 getUserMedia.noVideo.label = Pa Video
 getUserMedia.noApplication.label = Pa Aplikacion
 getUserMedia.noScreen.label = Pa Ekran
