[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/places/places.properties
+++ b/pt-BR/suite/chrome/common/places/places.properties
@@ -18,6 +18,8 @@ bookmarksRestoreFilterExtension=*.json
 bookmarksRestoreFormatError=Tipo de arquivo não suportado.
 bookmarksRestoreParseError=Não foi possível processar o arquivo de backup.
 
+bookmarksLivemarkLoading=Carregando RSS…
+bookmarksLivemarkFailed=Falha no carregamento do RSS.
 
 menuOpenLivemarkOrigin.label=Abrir "%S"
 
@@ -27,8 +29,18 @@ view.sortBy.url.label=Ordenar por localização
 view.sortBy.url.accesskey=l
 view.sortBy.date.label=Ordenar por data de visita
 view.sortBy.date.accesskey=v
+view.sortBy.visitCount.label=Ordenar por número de visitas
+view.sortBy.visitCount.accesskey=s
+view.sortBy.keyword.label=Ordenar por palavra-chave
+view.sortBy.keyword.accesskey=h
 view.sortBy.description.label=Ordenar por descrição
 view.sortBy.description.accesskey=d
+view.sortBy.dateAdded.label=Ordenar por adicionado
+view.sortBy.dateAdded.accesskey=e
+view.sortBy.lastModified.label=Ordenar por modificado
+view.sortBy.lastModified.accesskey=m
+view.sortBy.tags.label=Ordenar por rótulos
+view.sortBy.tags.accesskey=t
 
 searchBookmarks=Pesquisar nos favoritos
 searchCurrentDefault=Pesquisar em '%S'
@@ -39,7 +51,10 @@ tabs.openWarningMultipleBranded=Você está prestes a abrir %S abas.  Isto pode 
 tabs.openButtonMultiple=Abrir abas
 tabs.openWarningPromptMeBranded=Avisar quando a abertura de várias abas puder deixar o %S lento
 
+SelectImport=Importar arquivo de favoritos
+EnterExport=Exportar arquivo de favoritos
 
+saveSearch.title=Salvar pesquisa
 saveSearch.inputLabel=Nome:
 saveSearch.inputDefaultText=Nova pesquisa
 
@@ -47,6 +62,8 @@ detailsPane.noItems=Nenhum item
 detailsPane.oneItem=Um item
 detailsPane.multipleItems=%S itens
 
+mostVisitedTitle=Mais visitados
+recentlyBookmarkedTitle=Favoritos recentes
 recentTagsTitle=Rótulos recentes
 
 OrganizerQueryHistory=Histórico
