--- a/pt-BR/suite/chrome/mailnews/filter.properties
+++ b/pt-BR/suite/chrome/mailnews/filter.properties
@@ -8,8 +8,11 @@ pickTemplateToReplyWith=Selecione um modelo para responder.
 mustEnterName=Você deve dar um nome para o filtro
 cannotHaveDuplicateFilterTitle=Nome do filtro duplicado
 cannotHaveDuplicateFilterMessage=O nome do filtro que você forneceu já existe. Por favor, forneça um nome diferente.
+mustHaveFilterTypeTitle=Nenhum evento foi selecionado para o filtro
+mustHaveFilterTypeMessage=Você deve selecionar pelo menos um evento quando este filtro deve ser aplicado. Se você quiser que esse filtro não seja aplicado temporariamente em qualquer evento, desative-o no diálogo Filtros de mensagens.
 deleteFilterConfirmation=Tem certeza de que deseja excluir este filtro?
 untitledFilterName=Novo filtro
+matchAllFilterName=Todas as mensagens
 filterListBackUpMsg=Seus filtros não funcionam porque o arquivo msgFilterRules.dat, que contém seus filtros, não pôde ser lido. Um novo msgFilterRules.dat será criado e uma cópia do arquivo atual, renomeado rulesbackup.dat, será criada na mesma pasta.
 customHeaderOverflow=Você excedeu o limite de 50 cabeçalhos personalizados. Por favor exclua um ou mais cabeçalhos personalizados e tente novamente.
 filterCustomHeaderOverflow=Seus filtros excederam o limite de 50 cabeçalhos personalizados. Por favor edite o arquivo msgFilterRules.dat, que contém seus filtros, para usar menos cabeçalhos personalizados.
@@ -20,13 +23,18 @@ promptMsg=Você está no momento no processo de filtragem de mensagens.\nDeseja 
 stopButtonLabel=Parar
 continueButtonLabel=Continuar
 cannotEnableFilter=Este filtro provavelmente foi criado por uma versão posterior do Mozilla/Netscape. Não é possivel ativar este filtro porque esta versão não sabe como aplicá-lo.
+searchTermsInvalidTitle=Termos de pesquisa inválidos
 # LOCALIZATION NOTE(searchTermsInvalidRule)
 # %1$S=search attribute name from the invalid rule
 # %2$S=search operator from the bad rule
+searchTermsInvalidRule=Este filtro não pôde ser salvo porque os termos de pesquisa "%1$S %2$S" são inválidos no contexto atual.
 # LOCALIZATION NOTE(filterActionOrderExplanation)
 # Keep the \n\n that mean 2 linebreaks.
+filterActionOrderExplanation=Quando uma mensagem atender aos critérios deste filtro as ações serão executadas nesta ordem:\n\n
+filterActionOrderTitle=Ordem real de ações
 ## LOCALIZATION NOTE(filterActionItem):
 # %1$S=sequence number of the action, %2$S=action text, %3$S=action argument
+filterActionItem=%1$S. %2$S %3$S\n
 
 # for junk mail logging / mail filter logging
 # LOCALIZATION NOTE(junkLogDetectStr)
@@ -59,7 +67,9 @@ filterAction15=mensagem baixada do servidor POP3
 filterAction16=copiada para pasta
 filterAction17=com rótulo
 filterAction18=ignorar sub-tópico
+filterAction19=marcada como não lida
 # LOCALIZATION NOTE(filterAutoNameStr)
 # %1$S=Header or item to match, e.g. "From", "Tag", "Age in days", etc.
 # %2$S=Operator, e.g. "Contains", "is", "is greater than", etc.
 # %3$S=Value, e.g. "Steve Jobs", "Important", "42", etc.
+filterAutoNameStr=“%1$S” %2$S “%3$S”
