--- a/pt-BR/suite/chrome/common/contentAreaCommands.properties
+++ b/pt-BR/suite/chrome/common/contentAreaCommands.properties
@@ -6,6 +6,7 @@
 
 # LOCALIZATION NOTE (searchSelected): %1$S is the search engine,
 # %2$S is the selection string.
+searchSelected=Pesquisar em %1$S por "%2$S"
 searchSelected.accesskey=e
 
 blockImage=Bloquear imagens de %S
