--- a/pt-BR/suite/chrome/common/permissions/permissionsManager.properties
+++ b/pt-BR/suite/chrome/common/permissions/permissionsManager.properties
@@ -12,6 +12,7 @@ imagepermissionstext=Especifique os sites que podem ou não carregar imagens. Fo
 imagepermissionstitle=Exceções - Imagens
 imagepermissionshelp=images-help-managing
 offline-apppermissionstitle=Dados offline
+offline-apppermissionshelp=offline_apps
 
 can=Permitir
 canSession=Permitir na sessão
