--- a/pt-BR/suite/chrome/mailnews/compose/composeMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/compose/composeMsgs.properties
@@ -8,6 +8,7 @@
 ## LOCALIZATION NOTE (unableToOpenFile, unableToOpenTmpFile):
 ## %S will be replaced with the name of file that could not be opened
 unableToOpenFile=Não foi possível abrir o arquivo: %S.
+unableToOpenTmpFile=Não foi possível abrir o arquivo temporário %S. Verifique sua configuração de diretório temporário.
 
 ## @name NS_MSG_UNABLE_TO_SAVE_TEMPLATE
 12502=Não foi possível salvar sua mensagem como modelo.
@@ -175,6 +176,7 @@ errorIllegalLocalPart=Existem caracteres especiais na parte local do endereço %
 ## Strings use for the save message dialog shown when the user close a message compose window
 saveDlogTitle=Salvar mensagem
 ## LOCALIZATION NOTE (SaveDlogMessages): %1$S is folder name
+saveDlogMessages=A mensagem não foi enviada. Você quer salvar a mensagem na sua pasta de rascunhos (%1$S)?
 
 ## generics string
 defaultSubject=(Sem assunto)
@@ -238,22 +240,41 @@ assemblingMessage=Montando mensagem…
 smtpDeliveringMail=Enviando email...
 smtpMailSent=Mensagem enviada com sucesso
 
+assemblingMailInformation=Montando informação de e-mail…
 ## LOCALIZATION NOTE (gatheringAttachment): argument %S is file name/URI of attachment
+gatheringAttachment=Anexando %S…
+creatingMailMessage=Criando mensagem de email…
 
 ## LOCALIZATION NOTE (copyMessageStart): argument %S is folder name
+copyMessageStart=Copiando mensagem para a pasta %S…
+copyMessageComplete=Cópia concluída.
+copyMessageFailed=A cópia falhou.
 
 ## LOCALIZATION NOTE (largeMessageSendWarning):
 ## %S is the message size in user-friendly notation. Do not translate.
+largeMessageSendWarning=Aviso! Você está prestes a enviar uma mensagem de tamanho %S que pode exceder o limite permitido no servidor de e-mail. Tem certeza que quer fazer isso?
 
+sendingMessage=Enviando mensagem…
+sendMessageErrorTitle=Erro de envio de mensagem
+postingMessage=Enviando mensagem…
 
+sendLaterErrorTitle=Erro ao planejar envio de mensagem
+saveDraftErrorTitle=Erro ao salvar rascunho
+saveTemplateErrorTitle=Erro ao salvar modelo
 
 ## LOCALIZATION NOTE (failureOnObjectEmbeddingWhileSaving): argument %.200S is file name/URI of object to be embedded
+failureOnObjectEmbeddingWhileSaving=Houve um problema ao incluir o arquivo %.200S na mensagem. Você gostaria de continuar salvando a mensagem sem este arquivo?
 ## LOCALIZATION NOTE (failureOnObjectEmbeddingWhileSending): argument %.200S is file name/URI of object to be embedded
+failureOnObjectEmbeddingWhileSending=Houve um problema ao incluir o arquivo %.200S na mensagem. Você gostaria de continuar enviando a mensagem sem este arquivo?
+returnToComposeWindowQuestion=Você gostaria de voltar para a janela de edição de mensagem?
 
 ## reply header in composeMsg
 ## LOCALIZATION NOTE (mailnews.reply_header_authorwrotesingle): #1 is author (name of person replying to)
+mailnews.reply_header_authorwrotesingle=#1 escreveu:
 ## LOCALIZATION NOTE (mailnews.reply_header_ondateauthorwrote): #1 is author, #2 is date, #3 is time
+mailnews.reply_header_ondateauthorwrote=Em #2 #3, #1 escreveu:
 ## LOCALIZATION NOTE (mailnews.reply_header_authorwroteondate): #1 is author, #2 is date, #3 is time
+mailnews.reply_header_authorwroteondate=#1 escreveu em #2 #3:
 
 ## reply header in composeMsg
 ## user specified
@@ -261,6 +282,7 @@ mailnews.reply_header_originalmessage=-------- Mensagem Original --------
 
 ## forwarded header in composeMsg
 ## user specified
+mailnews.forward_header_originalmessage=-------- Mensagem encaminhada --------
 
 ## Strings used by the rename attachment dialog
 renameAttachmentTitle=Renomear anexo
@@ -268,9 +290,13 @@ renameAttachmentMessage=Novo nome do anexo:
 
 ## LOCALIZATION NOTE(smtpEnterPasswordPrompt): Do not translate the
 ## word $S. Place the word $S where the host name should appear.
+smtpEnterPasswordPrompt=Forneça sua senha para %S:
 ## LOCALIZATION NOTE(smtpEnterPasswordPromptWithUsername): Do not translate the
 ## words %1$S and %2$S. Place the word %1$S where the host name should appear,
 ## and %2$S where the user name should appear.
+smtpEnterPasswordPromptWithUsername=Forneça sua senha para "%2$S" em "%1$S":
+smtpEnterPasswordPromptTitle=Forneça a senha do servidor SMTP
 
 ## LOCALIZATION NOTE(errorSavingMsg): Do not translate the word %S. It
 ## will be replaced with the name of the folder the message is being saved to.
+errorSavingMsg=Houve um erro ao salvar a mensagem em %S. Tentar de novo?
