--- a/pt-BR/suite/chrome/mailnews/compose/sendProgress.properties
+++ b/pt-BR/suite/chrome/mailnews/compose/sendProgress.properties
@@ -4,9 +4,12 @@
 
 # LOCALIZATION NOTE (titleSendMsgSubject):
 # %S will be replaced by the message subject.
+titleSendMsgSubject=Enviando mensagem - %S
 titleSendMsg=Enviando mensagem
 # LOCALIZATION NOTE (titleSaveMsgSubject):
 # %S will be replaced by the message subject.
+titleSaveMsgSubject=Salvando mensagem - %S
+titleSaveMsg=Salvando mensagem
 
 # LOCALIZATION NOTE (percentMsg):
 # This string is used to format the text to the right of the progress meter.
