--- a/pt-BR/suite/chrome/mailnews/imapMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/imapMsgs.properties
@@ -8,8 +8,10 @@
 
 #LOCALIZATION NOTE(imapAlertDialogTile): Do not translate the word "%S"
 # below. Place the word %S where the account name should appear.
+imapAlertDialogTitle=Alerta para a conta %S
 
 # Status - opening folder
+imapStatusSelectingMailbox=Abrindo pasta %S…
 
 # Status - create folder
 imapStatusCreatingMailbox=Criando pasta...
@@ -57,8 +59,10 @@ imapStatusLoggingOut=Deslogando...
 imapStatusCheckCompat=Verificando as propriedades do servidor de mail...
 
 # Status - logging on
+imapStatusSendingLogin=Enviando informações de autenticação…
 
 # Status - auth logon
+imapStatusSendingAuthLogin=Enviando informações de autenticação…
 
 # Status - downloading message
 imapDownloadingMessage=Recebendo mensagem...
@@ -214,24 +218,32 @@ imapDeleteFolderDialogTitle=Excluir pasta
 imapDeleteFolderButtonLabel=&Excluir pasta
 
 # LOCALIZATION NOTE (imapAuthChangeEncryptToPlainSSL): %S is the server hostname
+imapAuthChangeEncryptToPlainSSL=O servidor IMAP %S não parece não suportar senhas criptografadas. Se você acabou de configurar essa conta, tente alterar o 'Modo de autenticação' para 'Senha normal' em 'Configurar contas | Servidor'. Se esta configuração funcionava e começou a dar erro, por favor, contate o serviço provedor ou o administrador de email.
 
 # LOCALIZATION NOTE (imapAuthChangePlainToEncrypt): %S is the server hostname
+imapAuthChangePlainToEncrypt=O servidor IMAP %S não permite senhas sem criptografia. Por favor, tente alterar o 'Modo de autenticação' para 'Senha criptografada' em 'Configurar contas | Servidor'.
 
 # LOCALIZATION NOTE (imapAuthChangeEncryptToPlainNoSSL): %S is the server hostname
+imapAuthChangeEncryptToPlainNoSSL=O servidor IMAP %S parece não suportar senhas criptografadas. Se você acabou de definir esta conta, tente alterar o 'Modo de autenticação' para 'Senha, transmitida de forma insegura' em 'Configurar contas | Servidor'. Se esta configuração funcionava e começou a dar erro, este é um cenário comum em que alguém poderia roubar sua senha.
 
 # LOCALIZATION NOTE (imapAuthMechNotSupported): %S is the server hostname
+imapAuthMechNotSupported=O servidor IMAP %S não suporta o modo de autenticação selecionado. Por favor, altere o 'Modo de autenticação' em 'Configurar contas | Servidor'.
 
 # LOCALIZATION NOTE (imapAuthGssapiFailed): %S is the server hostname
+imapAuthGssapiFailed=O ticket Kerberos/GSSAPI não foi aceito pelo servidor IMAP %S. Por favor, verifique se você está identificado no domínio Kerberos/GSSAPI.
 
 # LOCALIZATION NOTE (imapServerCommandFailed): 
 # Place the word %1$S in your translation where the name of the account name should appear.
 # Place the word %2$S in your translation where the server response should appear.
+imapServerCommandFailed=O comando atual não obteve sucesso. O servidor da conta %1$S respondeu: %2$S\u00A0
 
 # LOCALIZATION NOTE (imapFolderCommandFailed): Do not translate the word %S below.
 # Place the word %1$S in your translation where the name of the account should appear.
 # Place the word %2$S in your translation where the name of the folder should appear.
 # Place the word %3$S in your translation where the server response should appear.
+imapFolderCommandFailed=A operação atual em '%2$S' não obteve sucesso. O servidor para a conta %1$S respondeu: %3$S
 
 # LOCALIZATION NOTE (imapServerAlert):
 # Place the word %1$S in your translation where the name of the account should appear.
 # Place the word %2$S in your translation where the alert from the server should appear.
+imapServerAlert=Alerta para a conta %1$S: %2$S
