--- a/pt-BR/suite/chrome/mailnews/localMsgs.properties
+++ b/pt-BR/suite/chrome/mailnews/localMsgs.properties
@@ -8,7 +8,9 @@
 
 # LOCALIZATION NOTE(pop3ErrorDialogTitle): Do not translate the word "%S"
 # below. Place the word %S where the account name should appear.
+pop3ErrorDialogTitle=Ocorreu um erro na conta %S
 
+pop3EnterPasswordPromptTitle=Forneça sua senha
 
 # LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
 # and "%2$S" below. Place the word %1$S where the user name should appear, and
@@ -18,20 +20,25 @@ pop3EnterPasswordPrompt=Forneça a senha para "%1$S" em "%2$S":
 # LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
 # translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
 # user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Por favor, forneça uma senha para o usuário %1$S em %2$S:
 
 # Status - Downloading message n of m
 # LOCALIZATION NOTE (receivingMessages): Do not translate %1$S or %2$S in the following lines.
 # Place the word %1$S where the number of messages downloaded so far should appear.
 # Place the word %2$S where the total number of messages to receive should appear;
+receivingMessages=Baixando messagem %1$S de %2$S…
 
 # Status - connecting to host
+hostContact=Host contatado, enviando informações de autenticação…
 
 # Status - no messages to download
+noNewMessages=Não há novas mensagens
 
 # Status - messages received after the download
 #LOCALIZATION NOTE : Do not translate %1$S or %2$S in the following line.
 # %1$S will receive the number of messages received
 # %2$S will receive the total number of messages
+receivedMsgs=Recebidas %1$S de %2$S mensagens
 
 pop3OutOfDiskSpace=Não há espaço em disco suficiente para receber novas mensagens. Experimente remover mensagens antigas, esvaziar a lixeira e otimizar as pastas e então tente novamente.
 
@@ -53,6 +60,7 @@ pop3UsernameFailure=O envio do nome de usuário não foi bem-sucedido.
 # Status - password failed
 #LOCALIZATION NOTE (pop3PasswordFailed): Do not translate "%1$S" below.
 # Place the word %1$S where the user name should appear.
+pop3PasswordFailed=O envio da senha para o usuário %1$S não obteve sucesso.
 
 # Status - write error occurred
 pop3MessageWriteError=Não foi possível escrever as mensagens na caixa de mensagens. Verifique se você possui privilégios de escrita no sistema de arquivos e se há espaço em disco suficiente para copiar a caixa de emails.
@@ -60,6 +68,7 @@ pop3MessageWriteError=Não foi possível escrever as mensagens na caixa de mensa
 # Status - write error occurred
 # LOCALIZATION NOTE (pop3ServerBusy): Do not translate the word "%S" below.
 # Place %S where the account name should appear.
+pop3ServerBusy=A conta %S está sendo processada. Por favor, espere até que o processamento esteja completo para obter mensagens.
 
 # Status - retr failure from the server
 pop3RetrFailure=O comando RETR não foi bem-sucedido. Erro ao requisitar a mensagem.
@@ -97,6 +106,7 @@ movemailCantTruncateSpoolFile=Não foi possível truncar o arquivo de spool %S.
 movemailSpoolFileNotFound=Não foi possível localizar o arquivo de spool.
 
 #LOCALIZATION NOTE (movemailCantParseSpool): %S is file name
+movemailCantParseSpool=Não foi possível processar o arquivo SPOOL %S. O arquivo pode estar corrupto ou não ser válido.
 
 pop3TmpDownloadError=Houve um problema durante o recebimento da mensagem:   \nRemetente: %S\nAssunto: %S\nEsta mensagem pode conter vírus ou pode não haver espaço em disco suficiente. Ignorar a mensagem?
 
@@ -124,10 +134,16 @@ pop3DeleteFolderDialogTitle=Excluir pasta
 
 pop3DeleteFolderButtonLabel=&Excluir pasta
 
+pop3AuthInternalError=Estado de erro interno durante a autenticação ao servidor POP3. Este é um erro interno e inesperado no aplicativo, por favor, reporte isso como um bug.
 
+pop3AuthChangeEncryptToPlainNoSSL=O servidor POP3 parece não suportar senhas criptografadas. Se você acabou de definir esta conta, tente alterar o 'Modo de autenticação' para 'Senha, transmitida de forma insegura' em 'Configurar contas | Servidor'. Se esta configuração funcionava e começou a dar erro, este é um cenário comum em que alguém poderia roubar sua senha.
 
+pop3AuthChangeEncryptToPlainSSL=O servidor POP3 parece não suportar senhas criptografadas. Se você acabou de definir esta conta, tente alterar o 'Modo de autenticação' para 'Senha normal' em 'Configurar contas | Servidor'. Se esta configuração funcionava e começou a dar erro, por favor, contate o serviço provedor ou o administrador de email.
 
+pop3AuthChangePlainToEncrypt=O servidor POP3 não aceita senhas não criptografadas. Por favor, tente alterar o 'Modo de autenticação' para 'Senha criptografada' em 'Configurar contas | Servidor'.
 
 # Authentication server caps and pref don't match
+pop3AuthMechNotSupported=O servidor não suporta o modo de autenticação selecionado. Por favor, altere o 'Modo de autenticação' em 'Configurar contas | Servidor'.
 
 # Status - Could not log in to GSSAPI, and it was the only method
+pop3GssapiFailure=O ticket Kerberos/GSSAPI não foi aceito pelo servidor POP. Por favor, verifique se você está identificado no domínio Kerberos/GSSAPI.
