--- a/pt-BR/suite/chrome/mailnews/smime/am-smime.properties
+++ b/pt-BR/suite/chrome/mailnews/smime/am-smime.properties
@@ -7,6 +7,8 @@
 NoSenderSigningCert=Você especificou que esta mensagem deve ser assinada digitalmente, mas o certificado perdeu a validade ou o programa não localizou o certificado de assinatura especificado nas suas opções de contas.
 NoSenderEncryptionCert=Você especificou que esta mensagem deve ser criptografada, mas o certificado perdeu a validade ou o programa falhou ao encontrar o certificado de criptografia especificado nas suas opções de contas.
 MissingRecipientEncryptionCert=Você especificou que esta mensagem deve ser criptografada, mas o programa falhou ao encontrar um certificado de criptografia para %S.
+ErrorEncryptMail=Não foi possível criptografar a mensagem. Por favor, verifique se você possui um certificado de e-mail válido para cada destinatário. Certifique-se de que os certificados especificados para esta conta (em “Configurar contas”) são válidos e considerados confiáveis.
+ErrorCanNotSignMail=Não foi possivel assinar a mensagem. Por favor, certifique-se de que os certificados especificados nas opções de “Configurar contas” para esta conta são válidos e considerados confiáveis.
 
 ## Strings used for in the prefs.
 prefPanel-smime=Segurança
@@ -21,3 +23,5 @@ signing_wantSame=Deseja usar o mesmo certificado para assinar digitalmente suas 
 signing_needCertWantToSelect=Você também deve especificar um certificado para assinar digitalmente suas mensagens. Deseja configurar o certificado para assinar digitalmente mensagens agora?
 
 ## Strings used by nsMsgComposeSecure
+mime_smimeEncryptedContentDesc=Mensagem criptografada S/MIME
+mime_smimeSignatureContentDesc=Assinatura criptográfica S/MIME
