[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/sync/syncSetup.properties
+++ b/pt-BR/suite/chrome/common/sync/syncSetup.properties
@@ -27,6 +27,7 @@ button.syncOptionsCancel.label = Cancelar
 # #1 is the number of add-ons, see the link above for forms
 
 
+existingAccount.change.label = Esta preferência pode ser modificada pelo botão Opções do Sync, logo abaixo.
 
 # Several other strings are used (via Weave.Status.login), but they come from
 #  /services/sync
