--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -17,6 +17,7 @@ cookies.deleteSelectedTitle=Remover Cookies selecionados
 perm.allowXULXBL.label=Usar marcação XUL/XBL
 perm.cookie.label=Definir Cookies
 perm.falsestart-rc4.label=Início falso do TLS usando RC4
+perm.falsestart-rsa.label=Início falso do TLS usando RSA
 perm.geo.label=Compartilhar localização
 perm.image.label=Carregar imagens
 perm.indexedDB.label=Armazenar bancos de dados locais
