[pt-BR] update from Pootle (seamonkey)

--- a/pt-BR/suite/chrome/common/bookmarks/bm-props.properties
+++ b/pt-BR/suite/chrome/common/bookmarks/bm-props.properties
@@ -14,5 +14,6 @@ dialogTitleAddMulti=Novos favoritos
 dialogTitleEdit=Propriedades para "%S"
 
 bookmarkAllTabsDefault=[Nome da pasta]
+newFolderDefault=Nova pasta
 newBookmarkDefault=Novo favorito
 newLivemarkDefault=Novo favorito RSS
