--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -12,6 +12,7 @@ cookies.anyConnection.all=Qualquer tipo de conexão
 
 cookies.deleteSelected=Tem certeza de que deseja excluir os cookies selecionados?
 cookies.deleteSelectedTitle=Remover Cookies selecionados
+cookies.deleteSelectedYes=Exclui&r
 
 # permissions
 perm.allowXULXBL.label=Usar marcação XUL/XBL
@@ -44,10 +45,12 @@ pwd.noMasterPasswordPrompt=Tem certeza que deseja exibir suas senhas?
 
 pwd.deleteSelected=Tem certeza de que deseja excluir as senhas selecionadas?
 pwd.deleteSelectedTitle=Remover as senhas selecionadas
+pwd.deleteSelectedYes=Exclui&r
 
 # preferences
 prefs.deleteSelected=Tem certeza de que deseja excluir as preferências selecionadas?
 prefs.deleteSelectedTitle=Remover as preferências selecionadas
+prefs.deleteSelectedYes=Exclui&r
 
 # storage
 
@@ -57,10 +60,14 @@ prefs.deleteSelectedTitle=Remover as preferências selecionadas
 #   %2$S = unit of measure (bytes, KB, MB, ...)
 storageUsage=%1$S %2$S
 
+storage.deleteSelected=Tem certeza de que deseja excluir os armazenamentos web selecionados?
 storage.deleteSelectedTitle=Remover armazenamentos selecionados
+storage.deleteSelectedYes=Exclui&r
 
 # form data
+fdata.deleteSelected=Tem certeza de que deseja excluir as entradas do histórico de formulários selecionadas?
 fdata.deleteSelectedTitle=Remover dados de formulários selecionados
+fdata.deleteSelectedYes=Exclui&r
 
 # forget
 forget.desc.domain.pre=Esquecer todos os dados dos seguintes tipos associados ao domínio "%S":
