--- a/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
+++ b/pt-BR/suite/chrome/common/permissions/cookieViewer.properties
@@ -22,4 +22,7 @@ deleteAllSitesTitle=Excluir sites
 deleteAllSitesYes=&Excluir
 deleteSelectedCookies=Tem certeza de que deseja excluir os cookies selecionados?
 deleteSelectedCookiesTitle=Remover cookies selecionados
+deleteSelectedCookiesYes=Exclui&r
+deleteSelectedCookiesSites=Tem certeza de que deseja excluir os sites dos cookies selecionados?
 deleteSelectedSitesTitle=Remover websites selecionados
+deleteSelectedSitesYes=Exclui&r
