--- a/pt-BR/suite/chrome/common/pref/pref-applications.properties
+++ b/pt-BR/suite/chrome/common/pref/pref-applications.properties
@@ -26,6 +26,7 @@ usePluginIn=Usar %S (em %S)
 
 # LOCALIZATION NOTE (previewInApp, addNewsBlogsInApp): %S = brandShortName
 previewInApp=Visualizar em %S
+addNewsBlogsInApp=Inscrever-se em “%S”
 
 # LOCALIZATION NOTE (typeDescriptionWithType):
 # %1$S = type description (for example "Portable Document Format")
