--- a/pt-BR/suite/chrome/common/pref/prefutilities.properties
+++ b/pt-BR/suite/chrome/common/pref/prefutilities.properties
@@ -4,8 +4,13 @@
 
 cachefolder=Selecione a pasta do cache:
 #LOCALIZATION NOTE (%1$S) is the size and (%2$S) is the unit of disk space.
+cacheSizeInfo=Seu cache está usando %1$S %2$S de espaço em disco.
 
 # Offline apps
+offlineAppSizeInfo=Seu armazenamento em modo desconectado está usando $S %2$S de espaço em disco.
+offlineAppRemoveTitle=Excluir dados de sites em modo desconectado
+offlineAppRemovePrompt=Após excluir estes dados, o %S não estará mais disponível para uso em modo desconectado. Deseja excluir este site em modo desconectado?
+offlineAppRemoveConfirm=Excluir dados de sites em modo desconectado
 
 # LOCALIZATION NOTE: The next string is for the disk usage of the
 # offline application
@@ -16,6 +21,7 @@ offlineAppUsage=%1$S %2$S
 
 choosehomepage=Arquivo da página inicial
 downloadfolder=Selecione uma pasta de download
+desktopFolderName=Área de trabalho
 downloadsFolderName=Downloads
 choosesound=Selecione um som
 
@@ -23,3 +29,6 @@ SoundFiles=Sons
 
 labelDefaultFont=Padrão (%font_family%)
 
+syncUnlink.title=Deseja desconectar seu dispositivo?
+syncUnlink.label=Este dispositivo não estará mais associado à sua conta do Sync. Os seus dados, neste dispositivo e na conta do Sync, permanecerão intactos.
+syncUnlinkConfirm.label=Desconectar
