--- a/pt-BR/suite/chrome/common/dataman/dataman.properties
+++ b/pt-BR/suite/chrome/common/dataman/dataman.properties
@@ -12,11 +12,13 @@ cookies.anyConnection.all=Qualquer tipo de conexão
 
 cookies.deleteSelected=Tem certeza de que deseja excluir os cookies selecionados?
 cookies.deleteSelectedTitle=Remover Cookies selecionados
+cookies.deleteSelectedYes=Exclui&r
 
 # permissions
 perm.allowXULXBL.label=Usar marcação XUL/XBL
 perm.cookie.label=Definir Cookies
 perm.falsestart-rc4.label=Início falso do TLS usando RC4
+perm.falsestart-rsa.label=Início falso do TLS usando RSA
 perm.geo.label=Compartilhar localização
 perm.image.label=Carregar imagens
 perm.indexedDB.label=Armazenar bancos de dados locais
@@ -43,10 +45,12 @@ pwd.noMasterPasswordPrompt=Tem certeza que deseja exibir suas senhas?
 
 pwd.deleteSelected=Tem certeza de que deseja excluir as senhas selecionadas?
 pwd.deleteSelectedTitle=Remover as senhas selecionadas
+pwd.deleteSelectedYes=Exclui&r
 
 # preferences
 prefs.deleteSelected=Tem certeza de que deseja excluir as preferências selecionadas?
 prefs.deleteSelectedTitle=Remover as preferências selecionadas
+prefs.deleteSelectedYes=Exclui&r
 
 # storage
 
@@ -56,10 +60,14 @@ prefs.deleteSelectedTitle=Remover as preferências selecionadas
 #   %2$S = unit of measure (bytes, KB, MB, ...)
 storageUsage=%1$S %2$S
 
+storage.deleteSelected=Tem certeza de que deseja excluir os armazenamentos web selecionados?
 storage.deleteSelectedTitle=Remover armazenamentos selecionados
+storage.deleteSelectedYes=Exclui&r
 
 # form data
+fdata.deleteSelected=Tem certeza de que deseja excluir as entradas do histórico de formulários selecionadas?
 fdata.deleteSelectedTitle=Remover dados de formulários selecionados
+fdata.deleteSelectedYes=Exclui&r
 
 # forget
 forget.desc.domain.pre=Esquecer todos os dados dos seguintes tipos associados ao domínio "%S":
